k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: order-service
  namespace: microservices


spec:

  replicas: 2


  selector:

    matchLabels:

      app: order-service


  template:

    metadata:

      labels:

        app: order-service


    spec:

      containers:

      - name: order-service

        image: rohitpathare1204/order-service:latest


        ports:

        - containerPort: 8000
