k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: product-service
  namespace: microservices


spec:

  replicas: 2


  selector:

    matchLabels:

      app: product-service


  template:

    metadata:

      labels:

        app: product-service


    spec:

      containers:

      - name: product-service

        image: rohitpathare1204/product-service:latest


        ports:

        - containerPort: 8000
