k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: product-service
  namespace: microservices


spec:

  selector:

    app: product-service


  ports:

  - port: 80
    targetPort: 8000


  type: ClusterIP
