k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: microservices-ingress

  namespace: microservices


  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /



spec:


  ingressClassName: nginx


  rules:


  - host: api.microservices.com


    http:


      paths:


      - path: /user

        pathType: Prefix

        backend:

          service:

            name: user-service

            port:

              number: 80



      - path: /product

        pathType: Prefix

        backend:

          service:

            name: product-service

            port:

              number: 80




      - path: /order

        pathType: Prefix

        backend:

          service:

            name: order-service

            port:

              number: 80
